--- a/src/scss/components/_quick-links-dropdown.scss
+++ b/src/scss/components/_quick-links-dropdown.scss
@@ -6,8 +6,9 @@
     color: white;
     padding: 0 0.4rem 0 0.4rem;
     border: 1px white solid;
-    font-size: smaller;
-    margin-top: 0.5rem;
+    font-weight:lighter;
+    margin-top: .4rem;
+    
    
     
     
@@ -22,7 +23,7 @@
     
     display: inline-block;
     font-size: 1rem;
-    padding-left: 1.5rem;
+    padding-left: 1.2rem;
 
     ul{
         padding: 0;
